--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     
     <section>
         <h1> To Do List </h1>
+        <p class="parag"> One click when accomplished </p>
+        <p class="parag"> Double click to remove </p>
         <div class="container">
             <div class="input">
                 <input type="text" placeholder="Type here..." id="inputField">
